@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix depth bug introduced in the last trial
+
 0.000033  2016-03-24 08:39:51-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Better fox for #16 (workaround for caller() in END bug)
